<resources>
    <string name="app_name">Finances Help</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cart_description">Icone de um carrinho de compras</string>
    <string name="or">ou</string>
    <string name="entrar">Entrar</string>
    <string name="crie_uma_nova_conta">Crie uma nova conta</string>
    <string name="esqueceu_sua_senha_clique_aqui">Esqueceu sua senha? Clique aqui</string>
    <string name="continue_de_onde_parou">Continue de onde parou</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conclusion_text">Concluído (100%)</string>
    <string name="dotted">&#8226;</string>
    <string name="search">Busca</string>
    <string name="sugestoes_cursos">Avance para o próximo nível</string>
    <string name="sugestoes_cursos_descricao">Veja nossas sugestões de próximos estudos para que você domine ainda mais as finanças</string>
</resources>